Fix horizontal rule Proper text spacing

--- a/css/outer/about/content.less
+++ b/css/outer/about/content.less
@@ -15,9 +15,9 @@
   }
 
   hr {
-    border-style: dashed;
-    border-color: @grayLight;
     margin-bottom: 45px;
+    border: 0;
+    border-top: 1px dashed @grayLight;
   }
 
   h1 {
