--- a/css/outer/about/team.less
+++ b/css/outer/about/team.less
@@ -19,6 +19,8 @@
       margin-top: 5px;
     }
 
+    .note { margin: 1em 0;}
+
     .note, & > div { margin-left: 50px; }
   }
 
